--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+<li>shoppingList
+    <ol>
+		<li>Dress</li>
+		<li>Watch</li>
+		<li>Bike</li>
+	   </ol>
+         </li>
+
+	</ol>
+<ul>
+	<li>holidayList
+		<ul>
+			<li>Kankalitala</li>
+			<li>Tarapith</li>
+			<li>Tarokeswar</li>
+		</ul>
+	</li>
+</ul>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
