--- a/main.html
+++ b/main.html
@@ -8,24 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<ol>
-<li>shoppingList
-    <ol>
-		<li>Dress</li>
-		<li>Watch</li>
-		<li>Bike</li>
-	   </ol>
-         </li>
+<ol data="shoppingList">
+	<li>Dresss</li>
+	<li>Watch</li>
+    <li>Laptop</li>
+</ol>
+<ul data-ns-test="holidayList">
+<li>Tarapith</li>
+<li>Tarokeswar</li>
+<li>Haidrabad</li>
 
-	</ol>
-<ul>
-	<li>holidayList
-		<ul>
-			<li>Kankalitala</li>
-			<li>Tarapith</li>
-			<li>Tarokeswar</li>
-		</ul>
-	</li>
 </ul>
 
     <script type="text/javascript" src="./script.js">
