--- a/main.html
+++ b/main.html
@@ -8,12 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-<ol data="shoppingList">
+<ol class="data-ns-test">
 	<li>Dresss</li>
 	<li>Watch</li>
     <li>Laptop</li>
 </ol>
-<ul data-ns-test="holidayList">
+<ul class="data-ns-test">
 <li>Tarapith</li>
 <li>Tarokeswar</li>
 <li>Haidrabad</li>
