--- a/main.html
+++ b/main.html
@@ -8,15 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-<ol class="data-ns-test">
-	<li>Dresss</li>
-	<li>Watch</li>
-    <li>Laptop</li>
+	
+<ol >
+	<li data-ns-test="shoppingList">Dresss</li>
+	<li data-ns-test="shoppingList">Watch</li>
+    <li data-ns-test="shoppingList">Laptop</li>
 </ol>
-<ul class="data-ns-test">
-<li>Tarapith</li>
-<li>Tarokeswar</li>
-<li>Haidrabad</li>
+<ul>
+<li data-ns-test="holidayList">Tarapith</li>
+<li data-ns-test="holidayList">Tarokeswar</li>
+<li data-ns-test="holidayList">Haidrabad</li>
 
 </ul>
 
